[tool.poetry]
name = "Compare mobile costs"
version = "0.1.0"
description = "Comparing mobile costs from existing usage data (billing)"
authors = ["Berczi, Sandor <berczi.sandor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
phonenumbers = "^8.13.6"
pytimeparse = "^1.1.8"
openpyxl = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
